# LineageLens

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: README.md  accounts.csv  bank_sample_schema.sql  branches.csv  cards.csv  customers.csv  employees.csv  fraud_alerts.csv  generate_bank_test_data.py  loan_payments.csv  loans.csv  transactions.csv
deploy/: lineagelens.service
deploy/nginx/: lineagelens.conf
docs/: architecture.md
src/lineagelens/: __init__.py
src/lineagelens/config/: settings.py
src/lineagelens/ingestion/: metadata_loader.py
src/lineagelens/lineage/: graph_builder.py
src/lineagelens/models/: schema.py
src/lineagelens/query/: service.py
src/lineagelens/rag/: indexer.py
src/lineagelens/ui/: __init__.py  app.py
src/lineagelens/ui/static/: app.js  index.html  styles.css
tests/: test_query_service.py  test_ui_app.py
